manifests/06-nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud        # <-- Le script cherche souvent ce label ici
spec:
  type: ClusterIP
  selector:
    app: nextcloud        # <-- Doit matcher le label du pod (vu dans ton kubectl get pods)
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80      # <-- BIEN VERIFIER : P majuscule, pas d'underscore
